--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<head>
-  <link href="style.css" rel="stylesheet">
-</head>
-<body>
-  <h1>Hello World (public)"</h1>
-</body>
+<html>
+  <head>
+    <script src="/alert.js"></script>
+    <link href="/style.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="/panda.ico" />
+  </head>
+  <body>
+    <h1>Hello World (public)"</h1>
+  </body>
+</html>
