--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <link rel="shortcut icon" href="/panda.ico" />
   </head>
   <body>
-    <h1>Hello World (public)"</h1>
+    <h1>Hello World! (Main Page)</h1>
   </body>
 </html>
