--- a/public/memes/index.htm
+++ b/public/memes/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <link href="style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>Hello Memes </h1>
+  <h1>Hello Memes Index</h1>
 </body>
