--- a/public/test.htm
+++ b/public/test.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-  <link href="style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-  <h1>Hello World - HTM (public)"</h1>
+  <h1>Hello World - HTM"</h1>
 </body>
